fix test alignment on work cards

--- a/styles.css
+++ b/styles.css
@@ -208,6 +208,7 @@ main {
 	box-shadow: 0px 1px 17px -5px rgba(0,0,0,0.75);
 	margin: 1rem;
 	flex: 1 1 60rem;
+	text-align: center;
 }
 
 #that-messaging-app {
@@ -254,6 +255,7 @@ main {
 #audio {
 	height: 4rem;
 	width: auto;
+	
 }
 
 #work-card-three {
@@ -262,6 +264,7 @@ main {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	text-align: center;
 }
 
 .audio-image {
@@ -284,6 +287,7 @@ main {
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
+	text-align: center;
 	
 }
 
@@ -297,6 +301,7 @@ main {
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
+	text-align: center;
 }
 
 .jitsi {
@@ -309,6 +314,7 @@ main {
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
+	text-align: center;
 }
 
 .nextcloud {
